j'ai mis des heures à comprendre pourquoi le site n'affichait aucune de mes balises HTML, jusqu'à ce que je pense à regarder le fucking courde source de la page et que je vois : raw HTML ommited que je le cherche sur google... et bam stackoverflow, 36 like sur la réponse que check_site() m'avait donné sur l'ancienne version du site que j'avais réparé mais ne sachant pas à quoi ça servait je l'avais viré
C'est une évolution de Hugo que j'ai pas suivi (en même temps ai-je suivi quoi que ce soit....)

Meuf t'es sérieuse c'est un commit pas un roman quoi !

--- a/config.toml
+++ b/config.toml
@@ -67,3 +67,8 @@ paginate = 10
   linkedin = "cecilesauder"
   instagram = "bubububulle"
   github = "cecilesauder"
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
