--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ author = "Cécile Sauder"
 copyright = "&copy; 2018. All rights reserved."
 canonifyurls = true
 paginate = 10
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$"]
 
 
 [indexes]
